[package]
name = "scell"
version = "1.0.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "A smart container for objects in recursive data structures"
keywords = ["cell", "rc", "smart", "scell", "runtime"]
documentation = "https://vadixidav.github.io/scell/scell/"
repository = "https://github.com/vadixidav/scell/"
license = "BSD-2-Clause"

[dependencies]
atomic_refcell = "0.1.8"

[features]
default = []
unchecked = []
